--- a/index.html
+++ b/index.html
@@ -28,13 +28,8 @@
             <tbody id="data">
 
             </tbody>
-        </div>
-
-            </tbody>
-
-        </table>
-
-        <script>
+        </div>  
+        <!-- <script>
             fetch("https://dummyjson.com/products?limit=100").then(
                 res=>{
                     res.json().then(
@@ -62,15 +57,7 @@
                 }
             )
 
-        </script>
-
+        </script> -->
     </body>
-        </table>
-    </div>
-        <script>
-
-
-        </script>
-
-    </head>
+    <script src="Katalog.js"></script> 
 </html>
