usunięcie błędu- literówka w pliku html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <th> brand </th>
                     <th> category </th>
                     <th> rating </th>
-                    <th> proce </th>
+                    <th> price </th>
                     <th> stock </th>
                    
                 </tr>
