połączenie js z html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             border-collapse: collapse;
             width: auto;
-            color: cyan;
+            color: rgb(255, 255, 255);
         }
         td, th {
             border: 1px solid;
@@ -44,7 +44,7 @@
 
             </body>
         </table>
-        <script>
+        <script src="Katalog.js" defer>
 
 
         </script>
