zmiana kodu github

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    let url = 'git remote add origin git@github.com:MalinaVir/Katalog.git'
+    let url = 'git remote add origin git@github.com:MalinaVir/KatalogJS.git'
     let response = await fetch(url);
 
     let commits = await <response class="json"></response>
